2005-11-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Setting automatic
	beam behavior): Correct a few typos. Thanks to David Bobroff.

	* scripts/lilypond-book.py (LATEX_INSPECTION_DOCUMENT): Use
	\usepackage instead of \RequirePackage. Thanks to Bernard Hurley.

2005-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/*.py: gmane address for bugs.

2005-11-28 Pal Benko <benkop@freestart.hu>
	
	* make/ly-rules.make: add -f switch to mv

	* scm/output-libs.scm: add new bar symbol "." for punctus divisionis

	* lily/bar-line.cc: interpret it

2005-11-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in (--disable-documentation): New switch.

	* GNUmakefile.in: Use it.

	* stepmake/aclocal.m4: Use AC_ARG_ENABLE for kpatsea.

2005-11-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (do_file): search chunks for
	\\begin{document}

	* GNUmakefile.in: add copy step in between so we can lose the
	out-www directories.

2005-11-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/pango-font.cc (pango_item_string_stencil): put
	geometry.width into glyph-string too.

2005-11-26  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/define-music-display-methods.scm (RevertProperty):
	(OverrideProperty): Use grob-property-path property, a list of
	symbols, instead of grob-property, which used to be a single
	symbol.
	(BassFigureEvent): a figure can be a plain number, not necessarily a
	markup.

2005-11-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION: release 2.7.19
	
	* lily/figured-bass-engraver.cc (process_music): check
	figuredBassCenterContinuations first.

	* scm/translation-functions.scm (format-bass-figure): make double
	sharp larger. 

	* lily/mark-engraver.cc: read rehearsalMarkAlignSymbol to
	determine X-parent.

	* lily/system-start-delimiter-engraver.cc: move from
	Nested_system_start_delimiter_engraver, rename
	Nested_system_start_delimiter_engraver ->
	System_start_delimiter_engraver.
