@@ -46,8 +46,6 @@ AC_SUBST(LINK_GXX_STATICALLY)
 # must come before any header checks
 STEPMAKE_COMPILE
 
-STEPMAKE_KPATHSEA
-
 STEPMAKE_PYTHON(REQUIRED, 2.2)
 STEPMAKE_GCC(REQUIRED, 2.8)
 STEPMAKE_CXX(REQUIRED)
