@@ -1,15 +1,0 @@
-depth = ..
-
-NAME = kpath-guile
-MODULE_NAME = kpath-guile
-MODULE_LDFLAGS= = -lkpathsea
-SCRIPTS = 
-STEPMAKE_TEMPLATES = library c po
-
-MODULE_CFLAGS = -std=c99
-
-include $(depth)/make/stepmake.make 
-
-$(outdir)/kpath.o: $(config_hh)
-
-
