@@ -1,19 +1,0 @@
-# -*-python-*-
-
-Import ('env', 'src_glob')
-sources = src_glob ('*.c')
-includes = src_glob ('*.h')
-outdir = Dir ('.').path
-
-name = 'kpath-guile'
-e = env.Copy ()
-e.Append (CPPPATH = ['/#ttftool/include', '#/flower/include', outdir,],
-	  CCFLAGS = '-std=c99',
-	  )
-if env['static']:
-	e.Library (name, sources) 
-if not env['static'] or env['shared']:
-	e.SharedLibrary (name, sources)
-
-po = env.Command ('lilypond.po', sources + includes, env['pocommand'])
-env.Alias ('po-update', po)
