@@ -189,12 +189,6 @@ void add_scm_init_func (void (*f) ())
   scm_init_funcs_->push (f);
 }
 
-#if KPATHSEA
-extern "C" {
-  void initialize_kpathsea ();
-}
-#endif
-
 void
 ly_init_ly_module (void *)
 {
@@ -203,11 +197,6 @@ ly_init_ly_module (void *)
 
   if (be_verbose_global)
     progress_indication ("\n");
-
-#if KPATHSEA
-  if (is_TeX_format_global)
-    initialize_kpathsea ();
-#endif
 
   scm_primitive_load_path (scm_makfrom0str ("lily.scm"));
 }
