@@ -327,15 +327,18 @@
   (add-node 'italic 'bold))
 
 (define-public (make-cmr-tree factor)
-  (let ((n (make-font-tree-node 'font-encoding 'fetaMusic)))
+  (let*
+      ((n (make-font-tree-node 'font-encoding 'fetaMusic))
+       (module (resolve-module '(scm kpathsea)))
+       (find (eval 'ly:kpathsea-find-file module))
+       )
     (add-music-fonts n factor)
     (add-cmr-fonts n factor)
-    (if (defined? 'ly:kpathsea-find-file)
-	(begin
-	  (if (ly:kpathsea-find-file "lmr10.pfb")
-	      (add-cork-lm-fonts n factor))
-	  (if (ly:kpathsea-find-file "ecrm10.pfa")
-	      (add-ec-fonts n factor))))
+    
+    (if (find "lmr10.pfb")
+	(add-cork-lm-fonts n factor))
+    (if (find "ecrm10.pfa")
+	(add-ec-fonts n factor))
     n))
 
 
