@@ -1,3 +1,15 @@
+2005-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* configure.in (LINK_GXX_STATICALLY): remove kpathsea checks.
+
+	* kpath-guile/: remove directory
+
+	* scm/kpathsea.scm (ly:kpathsea-expand-variable): new
+	file. Encapsulate kpathsea using commandline tools.
+
+	* lily/all-font-metrics.cc (kpathsea_find_file): use (scm
+	kpathsea) module.
+
 2005-11-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* Documentation/user/advanced-notation.itely (Setting automatic
